# bincode

./: Cargo.toml  readme.md  search-index.js
bincode/: index.html  struct.SliceBox.html
bincode/serde/: index.html
examples/: basic.rs  bitvec.rs
implementors/core/convert/: trait.From.js
src/: bitpack.rs  bitvec.rs  float.rs  lib.rs
src/bincode/src/serde/: mod.rs.html
src/byteorder/: lib.rs.html  new.rs.html
src/num_traits/: bounds.rs.html  cast.rs.html  float.rs.html  identities.rs.html  int.rs.html  lib.rs.html  pow.rs.html  sign.rs.html
src/num_traits/ops/: checked.rs.html  mod.rs.html  saturating.rs.html
src/rustc_serialize/: base64.rs.html  collection_impls.rs.html  hex.rs.html  json.rs.html  lib.rs.html  mod.rs  reader.rs  serialize.rs.html  writer.rs
src/serde/: bytes.rs.html  iter.rs.html  lib.rs.html  macros.rs.html  mod.rs  reader.rs  utils.rs.html  writer.rs
src/serde/de/: from_primitive.rs.html  impls.rs.html  mod.rs.html  value.rs.html
src/serde/ser/: impls.rs.html  mod.rs.html
tests/: test.rs
